# rs-wfirex4-webapi

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  config_sample.toml
resource/xml/: export.xml
src/: main.rs  rs_wfirex4_api.rs
src/rs_wfirex4_api/: devices.rs  raw_api.rs
xml_preload/: Makefile  xml_preload.py
