[package]
name = "rs-wfirex4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.3"                   # Layered configuration system for Rust applications.
actix-rt = "2.9.0"                  # Tokio-based single-threaded async runtime for the Actix ecosystem
actix-web = "4.4.0"
phf = { version = "0.11", features = ["macros"] }
serde = "1.0.188"
serde_json = "1.0.105"              # A JSON serialization file format
byteorder = "1.4.3"                 # Library for reading/writing numbers in big-endian and little-endian.
log = "0.4.20"                      # A lightweight logging facade for Rust
env_logger = "0.10.0"               # A logging implementation for `log` which is configured via an environment variable.
fern = "0.6.2"                      # Simple, efficient logging
chrono = "0.4.30"                   # Date and time library for Rust